test/generate/namespace.yaml
kind: Namespace
apiVersion: v1
metadata: 
    name: "ns2"
    labels: 
      LabelForSelector : "namespace2"
