test/generate/policy_basic.yaml
apiVersion : kyverno.io/v1alpha1
kind : ClusterPolicy
metadata :
  name : basic-policy
spec :
  rules:
    - name: "Basic clone config generator for all namespaces"
      match:
        resources:
          kinds: 
          - Namespace
        selector:
          matchLabels:
            LabelForSelector : "namespace2"
      generate:
        kind: ConfigMap
        name: default-config
        clone:
          namespace: default
          name: config-template
    - name: "Basic config generator for all namespaces"
      match:
        resources:
          kinds: 
          - Namespace
        selector:
          matchLabels:
            LabelForSelector : "namespace2"
      generate:
        kind: Secret
        name: mongo-creds
        data:
          data:
            DB_USER: YWJyYWthZGFicmE=
            DB_PASSWORD: YXBwc3dvcmQ=
        metadata:
          labels:
            purpose: mongo
