test/generate/policy_generate.yaml
apiVersion: kyverno.io/v1alpha1
kind: ClusterPolicy
metadata:
  name: "zk-kafka-address"
spec:
  rules:
  - name: "copy-comfigmap"
    match:
      resources:
        kinds : 
        - Namespace
        selector:
          matchLabels:
            LabelForSelector : "namespace2"
    generate :
      kind: ConfigMap
      name : copied-cm
      clone:
        namespace : default
        name : game-config
  - name: "zk-kafka-address"
    match:
      resources: 
        kinds:
        - Namespace
        selector:
        matchExpressions:
          - {key: LabelForSelector, operator: In, values: [namespace2]}
    generate: 
      kind: ConfigMap
      name: zk-kafka-address
      data:
        kind: ConfigMap
        data:
          ZK_ADDRESS: "192.168.10.10:2181,192.168.10.11:2181,192.168.10.12:2181"
          KAFKA_ADDRESS: "192.168.10.13:9092,192.168.10.14:9092,192.168.10.15:9092"
